# dragonfly

./: .gitignore  .golangci.yml  .markdownlint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KJNAEV.HTML  Konaev.html  Makefile  README.md  SECURITY-INSIGHTS.yml  SECURITY.md  codecov.yml  go.mod  go.sum  kenesary
.github/: copilot-instructions.md
.github/workflows/: auto-assign.yml  check-size.yml  ci.yml  codeql-analysis.yml  compatibility-e2e-v1.yml  compatibility-e2e-v2.yml  compatibility-e2e.yml  docker.yml  e2e-nydus.yml  e2e-rate-limit.yml  e2e-v1-nydus.yml  e2e-v1.yml  e2e-v2-nydus.yml  e2e-v2-rate-limit.yml  e2e-v2.yml  e2e.yml  lint.yml  pr-labels.yml  release.yml  scorecards.yml  stale.yml
api/manager/: docs.go  swagger.json  swagger.yaml
client/config/: peerhost.go  peerhost_darwin.go  peerhost_test.go
client/daemon/: daemon.go
cmd/dependency/: dependency.go  dependency_test.go
cmd/injector/: README.md  main.go
deploy/docker-compose/: README.md
deploy/injector/: DEPLOYMENT.md  certificate.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml  webhook.yaml
hack/: build.sh  docker-build.sh  docker-push.sh  install.sh
internal/dferrors/: error.go
manager/: manager.go
python/dfcache_sdk/: README.md  pyproject.toml
python/dfcache_sdk/src/dragonfly_dfcache/: __init__.py  client.py  errors.py
python/dfcache_sdk/src/dragonfly_dfcache/proto/: dfdaemon_cache.proto
python/dfcache_sdk/tests/: test_client_basic.py
scheduler/: scheduler.go
version/: .platform_freebsd.go.un~
(+232 files in other folders)
